--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,17 +5,36 @@
     <meta charset="UTF-8">
     <title> Spirulinazur </title>
 
+    <!-- path to the css code !  -->
+    <link rel="stylesheet" href="css/main.css">
+
+
   </head>
 
   <body>
 
-    {% include banner.html %}
-    <main>
-      <article>
+    <div class="container">
+
+      <div class="banner">
+
+        {% include banner.html %}
+
+      </div>
+
+      <div class="text">
+
         {{ content }}
-      </article>
-      {% include form.html %}
-    </main>
+
+      </div>
+
+      <div class="form">
+
+        {% include form.html %}
+
+      </div>
+
+    </div>
+
   </body>
 
 </html>
