clear all now try the airtable logic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title> Spirulinazur </title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
 
     <!-- path to the css code !  -->
     <link rel="stylesheet" href="css/main.css">
