--- a/css/main.css
+++ b/css/main.css
@@ -1,103 +1,744 @@
-
-body {
-  position: relative;
-  width: 1440px;
-  height: 822px;
-
-  background: #29AAA7;
+/** {
+  margin: 0;
+  padding: 0;
 }
 
+html, body { height: 100%; }*/
+/*@import "ipad.css";
+@import "tel.css";
+@import "ordi.css";*/
 
-
-.container {
-
-  position: absolute;
-  width: 1146px;
-  height: 500px;
-  left: 148px;
-  top: 39px;
-
-}
-
-.banner {
-
-  position: absolute;
-  width: 266.79px;
-  height: 49.22px;
-  left: 157px;
-  top: 39px;
-
-}
-
-.text {
-
-  position: absolute;
-  width: 852px;
-  height: 160px;
-  left: 148px;
-  top: 203px;
-}
-
-.text h3 {
-
+html {
+  padding: 0;
+  margin: 0;
   font-family: Lato;
   font-style: normal;
-  font-weight: 500;
-  font-size: 45px;
-  line-height: 54px;
-  color: #FCFCFC;
 }
 
-.text h4 {
 
-font-family: Lato;
-font-style: normal;
-font-weight: 500;
-font-size: 40px;
-line-height: 48px;
-color: #060F39;
+body  {
+  position: relative;
+  background-color: #29AAA7;
+  font-family: Lato;
+  font-style: normal;
 }
 
-.form-input {
+.container-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
-  position: absolute;
-  width: 441px;
-  height: 55.24px;
-  left: 148px;
-  top: 450px;
+/*// -----------------
+// code for header
+*/
+#banner {
+  background: #29AAA7;
+  color: black;
+  font-weight: blod;
+  display: flex;
+  justify-content: space-between;
+}
 
-  /* Colors/White */
 
-  background: #FCFCFC;
-  /* Colors/LightGrey */
 
-  border: 1px solid #F4F4ED;
-  box-sizing: border-box;
-  border-radius: 8px;
+
+/*for big screen */
+/*for big screen */
+/*for big screen */
+/*for big screen */
+/*for big screen */
+/*for big screen */
+
+@media screen and (min-width: 1000px) {
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 38px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 15%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 250%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 220%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }
+*/
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 150%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 22%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 1.5px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 8px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 22%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 15px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    margin-top: 3.4px;
+
+    letter-spacing: 2px;
+  }
+
+/*  .form-chance {
+    display: flex;
+    justify-content: center;
+
+  }*/
+}
+
+/*----------------------------------------------------------*/
+@media (min-width: 800px) and (max-width: 1000px) {
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 28px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 15%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 200%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 180%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }
+*/
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 95%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 18%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 1.5px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 8px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 18%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 15px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 450;
+    font-size: 15px;
+
+    margin-top: -0.9px;
+
+    letter-spacing: 2px;
+  }
+
+/*  .form-chance {
+    display: flex;
+    justify-content: center;
+
+  }*/
+}
+
+
+/*for medium screen*/
+/*for medium screen*/
+/*for medium screen*/
+/*for medium screen*/
+/*for medium screen*/
+/*for medium screen*/
+
+@media (min-width: 500px) and (max-width: 800px) {
+
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 8%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 140%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 135%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }*/
+
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 90%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 18%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 1.5px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 8px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 18%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 15px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 350;
+    font-size: 10px;
+  /*  line-height: 20px;*/
+    letter-spacing: 1px;
+    margin-top: 1px;
+  }
 
 }
 
-.form-button {
 
-position: absolute;
-width: 144px;
-height: 54px;
-left: 626px;
-top: 452px;
 
-background: #060F39;
-border-radius: 36px;
+
+
+
+
+/*for small screen */
+/*for small screen */
+/*for small screen */
+/*for small screen */
+/*for small screen */
+/*for small screen */
+/*for small screen */
+
+@media (min-width: 350px) and (max-width: 500px) {
+
+
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 8%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 100%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 92%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }*/
+
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 52%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 15%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 1px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 7px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 15%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 15px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 250;
+    font-size: 7.3px;
+  /*  line-height: 20px;*/
+    letter-spacing: 0.5px;
+    margin-top: 1px;
+  }
+
 }
 
-.form-button h4 {
-color: white;
-font-family: Mplus 1p;
-font-style: normal;
-font-weight: 500;
-font-size: 13.5px;
-line-height: 20px;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 2px;
+@media (min-width: 250px) and (max-width: 350px) {
+
+
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 9px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 5%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 70%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 67%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }*/
+
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 34%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 15%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 0.75px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 6px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 15%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 13px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 100;
+    font-size: 4.7px;
+
+  /*  line-height: 20px;*/
+    letter-spacing: 0.3px;
+    margin-top: 0.2px;
+  }
+
+
 }
+
+@media (min-width: 0px) and (max-width: 250px) {
+
+
+
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 6px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 5%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 40%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 38%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }*/
+
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #29AAA7;
+    font-size: 2%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: -2%;
+    position: absolute;
+    width: 40%;
+    height: 15%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 0.75px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 6px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: -2%;
+    position: absolute;
+    width: 20%;
+    height: 15%;
+    left: 43%;
+
+    background: #060F39;
+    border-radius: 13px;
+  }
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 100;
+    font-size: 4.7px;
+
+  /*  line-height: 20px;*/
+    letter-spacing: 0.3px;
+    margin-top: 0.2px;
+  }
+
+
+}
+
