--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,38 +5,44 @@
     <meta charset="UTF-8">
     <title> Spirulinazur </title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+    <!-- Favicons -->
+    {% include favicons.html %}
 
     <!-- path to the css code !  -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/main.css">
 
 
   </head>
 
   <body>
+    {% if site.google_tag_manager %}{% include google/tag-manager-noscript.html %}{% endif %}
 
-    <div class="container">
+    <div class="container-wrapper">
 
-      <div class="banner">
+      <header id="header">
+        <div class="banner">
+          {% include header_fr.html %}
+        </div>
+      </header>
 
-        {% include banner.html %}
-
-      </div>
-
-      <div class="text">
-
-        {{ content }}
-
-      </div>
-
-      <div class="form">
-
-        {% include form.html %}
-
-      </div>
+      <section id="content">
+        <div class="text-container">
+          {{ content }}
+          {% include form_french.html %}
+        </div>
+      </section>
 
     </div>
 
+
+
+    <!-- JS -->
+    <!--[if lt IE 9]><script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <script src="{{ site.url }}{{ site.baseurl }}/assets/scripts.js?version-{{ site.version }}" type="text/javascript"></script>
+    {% if site.google_analytics %}{% include google/analytics.html %}{% endif %}
+    {% for script in page.scripts %}<script src="{{ site.url }}{{ site.baseurl }}{{ script }}?tag-{{ site.tag }}" type="text/javascript"></script>{% endfor %}
   </body>
 
 </html>
