--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {% include favicons.html %}
 
     <!-- path to the css code !  -->
-    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 
   </head>
