--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -2,7 +2,10 @@
   <section class="banner-links">
 
 <!--     <a href="https://www.spirulinazur.fr/">  <img src="assets/logo.svg" style="width:50%; height:50%"  alt="logo of spirulinazur"></a> -->
-    <img src="/assets/logo.svg" style="width:20%; height:20%; margin-left:15%;"  alt="logo of spirulinazur">
+    <a href="https://www.spirulinazur.fr/" target="_blank"
+      class="social-link social-icon">
+      <img src="/assets/logo.svg" style="width:20%; height:20%; margin-left:15%;"  alt="logo of spirulinazur">
+    </a>
 
 
 <!--     {% if lang=='fr' %}
