--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -1,4 +1,4 @@
 
-<link rel="icon" href="{{ site.url }}{{ site.baseurl }}/assets/favicons/logo_figma.png">
+<link rel="icon" href="../assets/logo_figma.png">
 <meta name="msapplication-config" content="{{ site.url }}{{ site.baseurl }}/assets/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
