--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,34 @@
+<footer class="footer-a" style="display: flex;   justify-content: space-around;
+">
+  <div class="footer-b">
 
-<div class="main-footer">
+    <div class="footer-c">
+      <h4> Nous suivre :</h4>
+    </div>
 
-  <small>Come check our website to order <a href="https://www.spirulinazur.fr/"> <strong> Spirulinazur </strong> </a></small>
+    <div class="footer-d" style="display: flex; justify-content: space-around;">
 
-  <div class="social-links">
-    {%- include social.html -%}
+      <div class="footer-e" style="display: flex; justify-content: space-between;">
+        <p> Notre site internet : </p>
+        <a href="https://www.spirulinazur.fr/"
+        class="social-link social-icon">
+        <img src="../assets/logo_figma.png" style="height: 30px; width: 30px;">
+      </a>
+
+      </div>
+      <div class="footer-e" style="display: flex; justify-content: space-between;">
+        <p> Instagram :  </p>
+        <a href="https://github.com/boschbird/"
+        class="social-link social-icon">
+        <img src="../assets/insta.png" style="height: 30px; width: 30px;">
+        </a>
+      </div>
+    </div>
+
   </div>
-
-</div>
+<!--   <nav>
+    <ul class="footer-nav">
+      {% include navlinks.html %}
+    </ul>
+  </nav> -->
+</footer>
