--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title> Spirulinazur </title>
+    <title> Spirulin'Azur </title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -31,6 +31,7 @@
         <div class="text-container">
           {{ content }}
           {% include form_french.html %}
+          {% include footer.html %}
         </div>
       </section>
 
