front improve but need to adapt all size screen

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,22 @@
-<footer class="footer-a" style="display: flex;   justify-content: space-around;
-">
+<footer class="footer-a" >
   <div class="footer-b">
 
-    <div class="footer-c">
-      <h4> Nous suivre :</h4>
-    </div>
 
-    <div class="footer-d" style="display: flex; justify-content: space-around;">
+    <div class="footer-d" style="display: flex; justify-content: left;   align-items: center;
+">
 
-      <div class="footer-e" style="display: flex; justify-content: space-between;">
-        <p> Notre site internet : </p>
-        <a href="https://www.spirulinazur.fr/"
-        class="social-link social-icon">
-        <img src="../assets/logo_figma.png" style="height: 30px; width: 30px;">
+      <a href="https://www.spirulinazur.fr/" target="_blank"
+        class="social-link social-icon" style="border-radius: 8px; border: 1.5px solid white;">
+        <img src="../assets/logo_figma.png" style="height: 50px; width: 50px;">
       </a>
 
-      </div>
-      <div class="footer-e" style="display: flex; justify-content: space-between;">
-        <p> Instagram :  </p>
-        <a href="https://github.com/boschbird/"
-        class="social-link social-icon">
-        <img src="../assets/insta.png" style="height: 30px; width: 30px;">
-        </a>
-      </div>
+      <a href="https://www.instagram.com/spirulinazur/?hl=fr" target="_blank" class="social-link social-icon" style='padding-left:35%;'>
+        <img src="../assets/insta.png" style="height: 70px; width: 70px;">
+      </a>
+
+      <a href="https://github.com/boschbird/" class="social-link social-icon" style="left:10%;">
+      </a>
+
     </div>
 
   </div>
