front perfect & amazing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
 ">
 
       <a href="https://www.spirulinazur.fr/" target="_blank"
-        class="social-link social-icon" style="border-radius: 8px; border: 1.5px solid white;">
-        <img src="../assets/logo_figma.png" style="height: 50px; width: 50px;">
+        class="site-logo-a" >
+        <img src="../assets/small_logo.svg" class='site-logo-b' >
       </a>
 
-      <a href="https://www.instagram.com/spirulinazur/?hl=fr" target="_blank" class="social-link social-icon" style='padding-left:35%;'>
-        <img src="../assets/insta.png" style="height: 70px; width: 70px;">
+      <a href="https://www.instagram.com/spirulinazur/?hl=fr" target="_blank" >
+        <img src="../assets/insta.png" class='insta-logo' >
       </a>
 
       <a href="https://github.com/boschbird/" class="social-link social-icon" style="left:10%;">
