--- a/_includes/form_french.html
+++ b/_includes/form_french.html
@@ -1,5 +1,5 @@
 
-<form accept-charset="UTF-8" action="" method="POST" >
+<form accept-charset="UTF-8" action="" method="POST" data-netlify="true" netlify>
 
     <input type="email" name="email" placeholder="ton_mail@hotmail.com" class="form-input">
     <input type="hidden" name="utf8" value="✓">
