need to add facebook share button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,10 @@
           {{ content }}
           {% include form_french.html %}
           {% include footer.html %}
+          {% include share-bare.html %}
         </div>
       </section>
+
 
     </div>
 
