fb share button doesn t work yet

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,13 +1,12 @@
 <div id="share-bar">
 
-    <h4>Partage :</h4>
 
     <div class="share-buttons">
-        <a  href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}"
-            onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
-            title="Share on Facebook" >
-            <i class="fa fa-facebook-official share-button"> facebook</i>
-        </a>
+        <a href="https://facebook.com/sharer.php?u={{ site.url }}" rel="nofollow" target="_blank" title="Share on Facebook">       <i class="fa fa-facebook-official share-button" style="text-decoration: underline;">  Partage sur Facebook </i></a>
+
+
+
+
     </div>
 
 </div>
