--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 150%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -234,7 +234,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 95%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -371,7 +371,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 80%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -510,7 +510,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 52%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -634,7 +634,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 34%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -761,7 +761,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 3.9px;
     /*text-align: center;*/
     padding: 0.8%;
