--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,12 +1,19 @@
 <div id="share-bar">
 
 
-    <div class="share-buttons">
-        <a href="https://facebook.com/sharer.php?u={{ site.url }}" rel="nofollow" target="_blank" title="Share on Facebook">       <i class="fa fa-facebook-official share-button" style="text-decoration: underline;">  Partage sur Facebook </i></a>
+    <div class="share-buttons" style="display: flex;   align-items: stretch;
+">
 
 
+    <p style="text-decoration: underline; color: white;">  Partages sur Facebook  <p>&nbsp;   &#128073; </p> &nbsp; &nbsp; </p>
+    <p>
+
+      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=73&height=20&appId" width="73" height="20" style="border-radius:5px; border:1px solid white;;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
+    </p>
 
 
     </div>
+
 
 </div>
