--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ body  {
 
 
   .form-input {
-    margin-top: -2%;
+    margin-top: 4%;
     position: absolute;
     width: 40%;
     height: 16%;
@@ -147,7 +147,7 @@ body  {
 
 
   .form-button {
-    margin-top: -2%;
+    margin-top: 4%;
     position: absolute;
     width: 30%;
     height: 16%;
@@ -158,7 +158,16 @@ body  {
     border-radius: 8px;
   }
 
+  .share-buttons {
+    margin-top: 25%;
 
+  }
+
+  .share-buttons p {
+    font-family: Lato;
+    font-style: normal;
+    font-size: 26px;
+  }
 
   .form-button h4 {
     color: white;
@@ -175,6 +184,7 @@ body  {
 
   }*/
 }
+
 
 /*----------------------------------------------------------*/
 @media (min-width: 800px) and (max-width: 1000px) {
@@ -242,7 +252,7 @@ body  {
 
 
   .form-input {
-    margin-top: -2%;
+    margin-top: 2.5%;
     position: absolute;
     width: 40%;
     height: 9%;
@@ -260,7 +270,7 @@ body  {
 
 
   .form-button {
-    margin-top: -2%;
+    margin-top: 2.5%;
     position: absolute;
     width: 26%;
     height: 9%;
@@ -271,6 +281,16 @@ body  {
     border-radius: 15px;
   }
 
+  .share-buttons {
+    margin-top: 20%;
+
+  }
+
+  .share-buttons p {
+    font-family: Lato;
+    font-style: normal;
+    font-size: 22px;
+  }
 
 
   .form-button h4 {
