deploy front for test

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -3,13 +3,13 @@
 ">
 
 
-  <p style="text-decoration: underline; color: white;">  Partages sur Facebook
-    <p>&nbsp;   &#128073; </p>
+  <p style=" color: white;" class='text-share'>  Partages sur Facebook
+   &nbsp;   &#128073; </p>
     &nbsp; &nbsp; </p>
 
   <p>
 
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=73&height=20&appId" width="73" height="20" style="border-radius:5px; border:1px solid white; overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=73&height=20&appId" width="30%" height="20%" style="border-radius:5px; border:1px solid white; overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" ></iframe>
 
   </p>
 
