fix button share issues fb doc not really good...

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,5 +1,6 @@
 
-<div class="share-buttons" style="display: flex;   align-items: stretch;
+<div class="share-buttons" style="display: flex;
+
 ">
 
 
@@ -7,11 +8,13 @@
    &nbsp;   &#128073; </p>
     &nbsp; &nbsp; </p>
 
-  <p>
+  <p >
 
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=73&height=20&appId" width="30%" height="20%" style="border-radius:5px; border:1px solid white; overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" ></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=1173&height=20&appId" class='logo-test' style="border-radius:5px; border:1px solid white ;overflow:hidden; font-size: 30px;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 
   </p>
+
+
 
 
 </div>
