--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,13 @@ body  {
   font-style: normal;
 }
 
+
+
+.logo-test{
+  width:110px;
+  height:30px;
+}
+
 .container-wrapper {
   display: flex;
   flex-direction: column;
@@ -168,6 +175,8 @@ body  {
     font-style: normal;
     font-size: 30px;
   }
+
+
 
   .form-button h4 {
     color: white;
@@ -448,6 +457,12 @@ body  {
     white-space: nowrap;
   }
 
+  .logo-test{
+  width:34px;
+  height:30px;
+  }
+
+
 
   .form-button h4 {
     color: white;
@@ -597,9 +612,17 @@ body  {
     font-style: normal;
     font-size: 12px;
   }
+
   .text-share {
     white-space: nowrap;
   }
+
+
+  .logo-test{
+    width:28px;
+    height:25px;
+  }
+
 
   .form-button h4 {
     color: white;
@@ -734,6 +757,13 @@ body  {
     font-style: normal;
     font-size: 9px;
   }
+
+
+  .logo-test{
+    width:26px;
+    height:23px;
+  }
+
 
   .form-button h4 {
     color: white;
@@ -870,6 +900,13 @@ body  {
     font-size: 10px;
   }
 
+
+
+
+  .logo-test{
+    width:23px;
+    height:22px;
+  }
 
   .form-button h4 {
     color: white;
