fixing deploy issues

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,7 +1,5 @@
 
-<div class="share-buttons" style="display: flex;
-
-">
+<div class="share-buttons" style="display: flex;">
 
 
   <p style=" color: white;" class='text-share'>  Partages sur Facebook
@@ -10,7 +8,7 @@
 
   <p >
 
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=1173&height=20&appId" class='logo-test' style="border-radius:5px; border:1px solid white ;overflow:hidden; font-size: 30px;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=1173&height=20&appId" width="105" height="20" class='logo-test' style="border-radius:5px; border:1px solid white ;overflow:hidden; font-size: 30px;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 
   </p>
 
