--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,22 +1,6 @@
 
+
 <div class="share-buttons" style="display: flex;">
-
-
-  <p style=" color: white;" class='text-share'>  Partages sur Facebook
-   &nbsp;   &#128073; </p>
-    &nbsp; &nbsp; </p>
-
-  <p >
-
-<!--     <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=1173&height=20&appId"  class='logo-test' style="border-radius:5px; border:1px solid white; overflow:hidden; font-size: 30px; width: 100%;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
- -->
-    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com%2F&layout=button&size=small&width=1173&height=20&appId" width="89" height="28" style="border:none; overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-
-  </p>
-
-
-
-
+&#128073; &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="https://www.facebook.com/sharer/sharer.php?app_id=1460941267346567&sdk=joey&u=https://chillyfacts.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=580')"><img src="../assets/icon-share.png" style="width: 120%; height: 100%;"></img></a>
 </div>
-
-
