--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,10 @@ body  {
   font-style: normal;
 }
 
+.share-buttons {
 
-
-.logo-test{
-  width:110px;
-  height:30px;
+  width: 100px;
 }
-
 .container-wrapper {
   display: flex;
   flex-direction: column;
