new style button far better and easier to do css with

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -1,6 +1,20 @@
 
 
-<div class="share-buttons" style="display: flex;">
-&#128073; &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="https://www.facebook.com/sharer/sharer.php?app_id=1460941267346567&sdk=joey&u=https://chillyfacts.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=580')"><img src="../assets/icon-share.png" style="width: 120%; height: 100%;"></img></a>
+<div class="share-buttons" style="display: flex; align-items: center;">
+
+  <p id="emoji-a">
+
+    &#128073;
+  </p>
+
+  <a href="https://www.facebook.com/sharer/sharer.php?app_id=534916013927872&sdk=joey&u=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=580')">
+    <img src="../assets/icon-share.png" id="logo-share">
+    </img>
+  </a>
+
 </div>
+
+<!--
+cle secrete fb dev : 70f8bcf30a0a76ab066d98b006dba8ab
+
+id : 534916013927872 -->
