--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,7 @@ body  {
   font-style: normal;
 }
 
-.share-buttons {
 
-  width: 100px;
-}
 .container-wrapper {
   display: flex;
   flex-direction: column;
@@ -173,6 +170,14 @@ body  {
     font-size: 30px;
   }
 
+  #emoji-a {
+    width: 10%;
+    height: 10%;
+  }
+
+  #logo-share {
+    width: 20%; height: 10%;
+  }
 
 
   .form-button h4 {
@@ -297,6 +302,15 @@ body  {
     font-style: normal;
     font-size: 25px;
 
+  }
+
+  #emoji-a {
+    width: 15%;
+    height: 10%;
+  }
+
+  #logo-share {
+    width: 20%; height: 10%;
   }
 
 
