--- a/_includes/form_french.html
+++ b/_includes/form_french.html
@@ -1,10 +1,19 @@
 
-<form accept-charset="UTF-8" action="" method="POST" data-netlify="true" netlify>
-
-    <input type="email" name="email" placeholder="ton_mail@hotmail.com" class="form-input">
-    <input type="hidden" name="utf8" value="✓">
 
 
-    <button type="submit" class="form-button"> <h4 style='justify-content: center;'> ABONNES TOI </h4></button>
+
+
+<form accept-charset="UTF-8" action="" method="POST" data-netlify="true" netlify class="form-container">
+    <div class="A">
+
+      <input type="email" name="email" placeholder="ton_mail@hotmail.com" class="form-input">
+      <input type="hidden" name="utf8" value="✓">
+    </div>
+
+    <div class="B">
+
+      <button type="submit" class="form-button"> <h4 style='justify-content: center;'> ABONNES TOI </h4></button>
+    </div>
 </form>
+
 
