--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 150%;
+    font-size: 175%;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -171,8 +171,10 @@ body  {
   }
 
   #emoji-a {
-    width: 10%;
+    width: 20%;
     height: 10%;
+    font-size: 40px;
+
   }
 
   #logo-share {
@@ -256,7 +258,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 95%;
+    font-size: 130%;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -307,6 +309,8 @@ body  {
   #emoji-a {
     width: 15%;
     height: 10%;
+    font-size: 35px;
+
   }
 
   #logo-share {
@@ -319,7 +323,7 @@ body  {
     font-weight: 450;
     font-size: 15px;
 
-    margin-top: 4.4px;
+    margin-top: 9.4px;
 
     letter-spacing: 2px;
   }
@@ -413,7 +417,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 80%;
+    font-size: 90%;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -440,11 +444,11 @@ body  {
 
 
   .form-button {
-    margin-top: 2%;
+    margin-top: 12%;
     position: absolute;
-    width: 29%;
+    width: 40%;
     height: 10%;
-    left: 43%;
+    left: 0;
 
     border: 1.5px solid white;
     background: #060F39;
@@ -468,20 +472,26 @@ body  {
     white-space: nowrap;
   }
 
-  .logo-test{
-  width:34px;
-  height:30px;
+  #emoji-a {
+    font-size: 30px;
+    width: 25%;
+    height: 10%;
   }
+
+  #logo-share {
+    width: 17%; height: 9%;
+  }
+
 
 
 
   .form-button h4 {
     color: white;
     font-weight: 350;
-    font-size: 10px;
+    font-size: 14px;
   /*  line-height: 20px;*/
     letter-spacing: 1px;
-    margin-top: 6.8px;
+    margin-top: 8.5px;
 
   }
 
@@ -574,7 +584,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 52%;
+    font-size: 72%;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -601,11 +611,11 @@ body  {
 
 
   .form-button {
-    margin-top: 3.5%;
+    margin-top: 15.6%;
     position: absolute;
-    width: 26%;
+    width: 40%;
     height: 12%;
-    left: 43%;
+    left: 0;
 
     background: #060F39;
     border: 1px solid white;
@@ -628,20 +638,28 @@ body  {
     white-space: nowrap;
   }
 
-
-  .logo-test{
-    width:28px;
-    height:25px;
+  #emoji-a {
+    font-size: 21px;
+    width: 40%;
+    height: 10%;
   }
 
+  #logo-share {
+    width: 17%; height: 9%;
+  }
+
+  .form-container {
+    display: flex;
+    flex-direction: column;
+  }
 
   .form-button h4 {
     color: white;
     font-weight: 250;
-    font-size: 7.3px;
+    font-size: 12.3px;
   /*  line-height: 20px;*/
     letter-spacing: 0.5px;
-    margin-top: 6px;
+    margin-top: 9px;
   }
 
   .insta-logo {
@@ -718,7 +736,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 34%;
+    font-size: 50%;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -746,11 +764,11 @@ body  {
 
 
   .form-button {
-    margin-top: 3.3%;
+    margin-top: 16.4%;
     position: absolute;
-    width: 29%;
+    width: 40%;
     height:14%;
-    left: 43%;
+    left: 0;
 
     background: #060F39;
     border: 0.75px solid white;
@@ -769,21 +787,24 @@ body  {
     font-size: 9px;
   }
 
-
-  .logo-test{
-    width:26px;
-    height:23px;
+  #emoji-a {
+    font-size: 17px;
+    width: 40%;
+    height: 10%;
   }
 
+  #logo-share {
+    width: 19%; height: 11%;
+  }
 
   .form-button h4 {
     color: white;
     font-weight: 100;
-    font-size: 4.7px;
+    font-size: 8.7px;
 
   /*  line-height: 20px;*/
     letter-spacing: 0.3px;
-    margin-top: 5.6px;
+    margin-top: 7.6px;
   }
 
   .insta-logo {
@@ -861,7 +882,7 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 3.9px;
+    font-size: 6px;
     /*text-align: center;*/
     padding: 0.8%;
   }
@@ -871,7 +892,7 @@ body  {
     margin-top: -2%;
     position: absolute;
     width: 45%;
-    height: 18%;
+    height: 15%;
     left: 0;
 
     /* Colors/White */
@@ -888,11 +909,11 @@ body  {
 
 
   .form-button {
-    margin-top: -2%;
+    margin-top: 17%;
     position: absolute;
-    width: 46%;
-    height: 18%;
-    left: 48%;
+    width: 45%;
+    height: 15%;
+    left: 0;
 
     background: #060F39;
     border: 0.75px solid white;
@@ -913,20 +934,25 @@ body  {
 
 
 
-
-  .logo-test{
-    width:23px;
-    height:22px;
+  #emoji-a {
+    font-size: 14px;
+    width: 45%;
+    height: 10%;
   }
+
+  #logo-share {
+    width: 21%; height: 13%;
+  }
+
 
   .form-button h4 {
     color: white;
     font-weight: 100;
-    font-size: 4.7px;
+    font-size: 6.7px;
 
   /*  line-height: 20px;*/
     letter-spacing: 0.3px;
-    margin-top: 5.6px;
+    margin-top: 6.6px;
   }
 
   .insta-logo {
