--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
     <!-- path to the css code !  -->
     <link rel="stylesheet" href="../css/main.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
   </head>
 
