--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html, body { height: 100%; }*/
 html {
   padding: 0;
   margin: 0;
-  font-family: Lato;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 
@@ -19,7 +19,7 @@ html {
 body  {
   position: relative;
   background-color: #29AAA7;
-  font-family: Lato;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 
@@ -99,12 +99,12 @@ body  {
   }
 
   .text-container h3 {
-    font-size: 250%;
+    font-size: 260%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 220%;
+    font-size: 225%;
     color: #060F39;
   }
 
@@ -185,9 +185,8 @@ body  {
   .form-button h4 {
     color: white;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 21.9px;
-
     letter-spacing: 2px;
   }
 
@@ -241,7 +240,7 @@ body  {
   }
 
   .text-container h4 {
-    font-size: 180%;
+    font-size: 175%;
     color: #060F39;
   }
 
