--- a/_includes/form_french.html
+++ b/_includes/form_french.html
@@ -12,7 +12,7 @@
 
     <div class="B">
 
-      <button type="submit" class="form-button"> <h4 style='justify-content: center;'> ABONNES TOI </h4></button>
+      <button type="submit" class="form-button"> <h4 style='justify-content: center;'> ABONNE-TOI </h4></button>
     </div>
 </form>
 
