--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 175%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -160,7 +160,7 @@ body  {
   }
 
   .share-buttons {
-    margin-top: 25%;
+    margin-top: 23%;
 
   }
 
@@ -256,7 +256,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color:#060F39;
     font-size: 130%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -415,7 +415,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 90%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -582,7 +582,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 72%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -734,7 +734,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 50%;
     /*text-align: center;*/
     padding: 0.8%;
@@ -880,7 +880,7 @@ body  {
 
 
   input[placeholder] {
-    color: #29AAA7;
+    color: #060F39;
     font-size: 6px;
     /*text-align: center;*/
     padding: 0.8%;
