--- a/css/main.css
+++ b/css/main.css
@@ -138,11 +138,9 @@ body  {
 
     background: #FCFCFC;
     /* Colors/LightGrey */
-
     border: 1.5px solid #060F39;
     box-sizing: border-box;
     border-radius: 8px;
-
   }
 
 
@@ -153,14 +151,13 @@ body  {
     width: 30%;
     height: 16%;
     left: 43%;
-
     background: #060F39;
     border: 1.5px solid white;
     border-radius: 8px;
   }
 
   .share-buttons {
-    margin-top: 23%;
+    margin-top: 18%;
 
   }
 
@@ -173,12 +170,11 @@ body  {
   #emoji-a {
     width: 20%;
     height: 10%;
-    font-size: 40px;
-
+    font-size: 70px;
   }
 
   #logo-share {
-    width: 20%; height: 10%;
+    width: 18%; height: 9%;
   }
 
 
@@ -186,7 +182,7 @@ body  {
     color: white;
     font-weight: 500;
     font-size: 25px;
-    margin-top: 21.9px;
+    margin-top: 26.4px;
     letter-spacing: 2px;
   }
 
@@ -267,7 +263,7 @@ body  {
     margin-top: 2.5%;
     position: absolute;
     width: 40%;
-    height: 9%;
+    height: 12%;
     left: 0;
     /* Colors/White */
 
@@ -285,7 +281,7 @@ body  {
     margin-top: 2.5%;
     position: absolute;
     width: 26%;
-    height: 9%;
+    height: 12%;
     left: 43%;
 
     border: 1.5px solid white;
@@ -294,7 +290,7 @@ body  {
   }
 
   .share-buttons {
-    margin-top: 20%;
+    margin-top: 17%;
 
   }
 
@@ -306,14 +302,15 @@ body  {
   }
 
   #emoji-a {
-    width: 15%;
+    width: 30%;
     height: 10%;
-    font-size: 35px;
+    font-size: 50px;
 
   }
 
   #logo-share {
-    width: 20%; height: 10%;
+    width: 18%;
+    height: 9%;
   }
 
 
@@ -321,9 +318,7 @@ body  {
     color: white;
     font-weight: 450;
     font-size: 15px;
-
-    margin-top: 9.4px;
-
+    margin-top: 16px;
     letter-spacing: 2px;
   }
 
@@ -352,12 +347,168 @@ body  {
 
 /*for medium screen*/
 /*for medium screen*/
-/*for medium screen*/
-/*for medium screen*/
-/*for medium screen*/
-/*for medium screen*/
 
-@media (min-width: 500px) and (max-width: 800px) {
+
+@media (min-width: 500px) and (max-width: 650px) {
+
+  .body {
+    background-color: red;
+  }
+  .banner-links {
+    margin-top: 3%;
+  }
+
+  .language-header {
+    margin-left: 80%;
+    margin-top: -4%;
+  }
+
+
+  .language-header  a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+  }
+
+  /*//--------------
+  // code for footer
+  */
+
+
+
+  /*code for the content */
+
+  .text-container {
+    position: absolute;
+  /*  width: 852px;
+    height: 160px;*/
+    left: 15%;
+    top: 100%;
+    margin-top: 7%;
+  }
+
+  .text-container h3 {
+    font-size: 140%;
+    color: #FCFCFC;
+  }
+
+  .text-container h4 {
+    font-size: 135%;
+    color: #060F39;
+  }
+
+/*  .discount-text {
+    font-size: 120%;
+    color: #060F39;
+    margin-top: 9%;
+    padding-left: 4%;
+    width: 100%;
+  }*/
+
+  /*code for the form */
+
+
+  input[placeholder] {
+    color: #060F39;
+    font-size: 90%;
+    /*text-align: center;*/
+    padding: 0.8%;
+  }
+
+
+  .form-input {
+    margin-top: 2%;
+    position: absolute;
+    width: 40%;
+    height: 10%;
+    left: 0;
+
+    /* Colors/White */
+
+    background: #FCFCFC;
+    /* Colors/LightGrey */
+
+    border: 1.5px solid #060F39;
+    box-sizing: border-box;
+    border-radius: 8px;
+
+  }
+
+
+
+  .form-button {
+    margin-top: 12%;
+    position: absolute;
+    width: 40%;
+    height: 10%;
+    left: 0;
+
+    border: 1.5px solid white;
+    background: #060F39;
+    border-radius: 8px;
+  }
+
+  .share-buttons {
+    margin-top: 23%;
+    width: 100%;
+
+  }
+
+  .share-buttons p {
+    font-family: Lato;
+    font-style: normal;
+    font-size: 15px;
+
+  }
+
+  .text-share {
+    white-space: nowrap;
+  }
+
+  #emoji-a {
+    font-size: 30px;
+    width: 25%;
+    height: 10%;
+  }
+
+  #logo-share {
+    width: 17%; height: 9%;
+  }
+
+
+
+
+  .form-button h4 {
+    color: white;
+    font-weight: 350;
+    font-size: 14px;
+  /*  line-height: 20px;*/
+    letter-spacing: 1px;
+    margin-top: 8.5px;
+
+  }
+
+
+  .insta-logo {
+    height: 62px; width: 62px;
+    margin-top: 4%;
+  }
+
+  .site-logo-b {
+    height: 33px; width: 40px;
+  }
+  .site-logo-a {
+    border-radius: 8px; border: 1.5px solid white;
+  }
+
+}
+
+/*--------------------------------------------------------------------------
+--------------------------------------------------------------------------
+--------------------------------------------------------------------------*/
+
+
+@media (min-width: 500px) and (max-width: 650px) {
 
 
   .banner-links {
