--- a/css/main.css
+++ b/css/main.css
@@ -347,17 +347,20 @@ body  {
 
 /*for medium screen*/
 /*for medium screen*/
+/*
+--------------------------------------------------------------------------
+--------------------------------------------------------------------------
+--------------------------------------------------------------------------
+--------------------------------------------------------------------------*/
 
 
 @media (min-width: 650px) and (max-width: 800px) {
 
-  body {
-    background-color: green;
-  }
+
 
 
   .banner-links {
-    margin-top: 3%;
+    margin-top: 8%;
   }
 
   .language-header {
@@ -387,21 +390,19 @@ body  {
 
     top: 100%;
     margin-top: 7%;
-
+    width: 90%;
+    left: 5%;
+    right: 5%;
   }
 
-  .container-wrapper {
-    display: flex;
-    justify-content: center;
-  }
 
   .text-container h3 {
-    font-size: 140%;
+    font-size: 220%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 135%;
+    font-size: 190%;
     color: #060F39;
   }
 
@@ -418,18 +419,20 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 90%;
+    font-size: 135%;
     /*text-align: center;*/
     padding: 0.8%;
+    padding-left: 25%;
   }
 
 
   .form-input {
     margin-top: 2%;
     position: absolute;
-    width: 40%;
+    width: 80%;
     height: 10%;
-    left: 0;
+    left: 10%;
+    right: 10%;
 
     /* Colors/White */
 
@@ -447,9 +450,10 @@ body  {
   .form-button {
     margin-top: 12%;
     position: absolute;
-    width: 40%;
+    width: 80%;
     height: 10%;
-    left: 0;
+    left: 10%;
+    right: 10%;
 
     border: 1.5px solid white;
     background: #060F39;
@@ -457,7 +461,7 @@ body  {
   }
 
   .share-buttons {
-    margin-top: 23%;
+    margin-top: 28%;
     width: 100%;
 
   }
@@ -475,12 +479,15 @@ body  {
 
   #emoji-a {
     font-size: 30px;
-    width: 25%;
     height: 10%;
+    width: 50%;
+    padding-left: 35%;
   }
 
   #logo-share {
-    width: 17%; height: 9%;
+    width: 27%;
+    height: 17%;
+
   }
 
 
@@ -492,7 +499,7 @@ body  {
     font-size: 14px;
   /*  line-height: 20px;*/
     letter-spacing: 1px;
-    margin-top: 8.5px;
+    margin-top: 14.5px;
 
   }
 
@@ -518,6 +525,11 @@ body  {
 
 @media (min-width: 500px) and (max-width: 650px) {
 
+
+
+  body {
+    background-color: green;
+  }
 
   .banner-links {
     margin-top: 3%;
