--- a/css/main.css
+++ b/css/main.css
@@ -478,15 +478,16 @@ body  {
   }
 
   #emoji-a {
-    font-size: 30px;
+    font-size: 50px;
     height: 10%;
     width: 50%;
-    padding-left: 35%;
+    padding-left: 31%;
   }
 
   #logo-share {
-    width: 27%;
-    height: 17%;
+    width: 37%;
+    height: 23%;
+    padding-left: 7%;
 
   }
 
@@ -646,16 +647,16 @@ body  {
   }
 
   #emoji-a {
-    font-size: 25px;
+    font-size: 34px;
     height: 10%;
     width: 50%;
-    padding-left: 39%;
+    padding-left: 35%;
   }
 
   #logo-share {
-    width: 32%;
-    height: 19.9%;
-
+    width: 35%;
+    height: 22%;
+    padding-left: 5%;
   }
 
 
@@ -701,10 +702,8 @@ body  {
 
 @media (min-width: 350px) and (max-width: 500px) {
 
-
-
   .banner-links {
-    margin-top: 3%;
+    margin-top: 8%;
   }
 
   .language-header {
@@ -716,7 +715,7 @@ body  {
   .language-header  a {
     color: white;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 18px;
   }
 
   /*//--------------
@@ -731,18 +730,22 @@ body  {
     position: absolute;
   /*  width: 852px;
     height: 160px;*/
-    left: 8%;
+
     top: 100%;
     margin-top: 7%;
+    width: 90%;
+    left: 5%;
+    right: 5%;
   }
 
+
   .text-container h3 {
-    font-size: 100%;
+    font-size: 200%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 92%;
+    font-size: 175%;
     color: #060F39;
   }
 
@@ -759,54 +762,56 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 72%;
+    font-size: 115%;
     /*text-align: center;*/
     padding: 0.8%;
+    padding-left: 7%;
   }
 
 
   .form-input {
-    margin-top: 3.5%;
+    margin-top: 2%;
     position: absolute;
-    width: 40%;
-    height: 12%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
     /* Colors/White */
 
     background: #FCFCFC;
     /* Colors/LightGrey */
 
-    border: 1px solid #060F39;
+    border: 1.5px solid #060F39;
     box-sizing: border-box;
-    border-radius: 7px;
+    border-radius: 8px;
 
   }
 
-
-
   .form-button {
-    margin-top: 15.6%;
+    margin-top: 25%;
     position: absolute;
-    width: 40%;
-    height: 12%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
+    border: 1.5px solid white;
     background: #060F39;
-    border: 1px solid white;
-
-    border-radius: 7px;
+    border-radius: 8px;
   }
 
   .share-buttons {
-    margin-top: 23.7%;
+    margin-top: 50%;
+    width: 100%;
 
   }
 
   .share-buttons p {
     font-family: Lato;
     font-style: normal;
-    font-size: 12px;
+    font-size: 15px;
+
   }
 
   .text-share {
@@ -814,49 +819,51 @@ body  {
   }
 
   #emoji-a {
-    font-size: 21px;
-    width: 40%;
+    font-size: 35px;
     height: 10%;
+    width: 70%;
+    padding-left: 30%;
   }
 
   #logo-share {
-    width: 17%; height: 9%;
+    width: 46%;
+    height: 33%;
+    padding-left: 10%;
+
   }
 
-  .form-container {
-    display: flex;
-    flex-direction: column;
-  }
+
+
 
   .form-button h4 {
     color: white;
-    font-weight: 250;
-    font-size: 12.3px;
+    font-weight: 350;
+    font-size: 14px;
   /*  line-height: 20px;*/
-    letter-spacing: 0.5px;
-    margin-top: 9px;
+    letter-spacing: 1px;
+    margin-top: 15px;
+
   }
 
+
   .insta-logo {
-    height: 50px; width: 50px;
-    margin-top: 8%;
+    height: 62px; width: 62px;
+    margin-top: 4%;
   }
 
   .site-logo-b {
-    height: 34px; width: 34px;
+    height: 33px; width: 40px;
   }
   .site-logo-a {
-    border-radius: 8px; border: 1.0px solid white;
+    border-radius: 8px; border: 1.5px solid white;
   }
 
 }
 
 @media (min-width: 250px) and (max-width: 350px) {
 
-
-
   .banner-links {
-    margin-top: 3%;
+    margin-top: 8%;
   }
 
   .language-header {
@@ -868,7 +875,7 @@ body  {
   .language-header  a {
     color: white;
     text-decoration: none;
-    font-size: 9px;
+    font-size: 18px;
   }
 
   /*//--------------
@@ -883,18 +890,22 @@ body  {
     position: absolute;
   /*  width: 852px;
     height: 160px;*/
-    left: 5%;
+
     top: 100%;
     margin-top: 7%;
+    width: 90%;
+    left: 5%;
+    right: 5%;
   }
 
+
   .text-container h3 {
-    font-size: 70%;
+    font-size: 170%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 67%;
+    font-size: 150%;
     color: #060F39;
   }
 
@@ -911,87 +922,98 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 50%;
+    font-size: 90%;
     /*text-align: center;*/
     padding: 0.8%;
+    padding-left: 4%;
   }
 
 
-
   .form-input {
-    margin-top: 3.3%;
+    margin-top: 2%;
     position: absolute;
-    width: 40%;
-    height: 14%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
     /* Colors/White */
 
     background: #FCFCFC;
     /* Colors/LightGrey */
 
-    border: 0.75px solid #060F39;
+    border: 1.5px solid #060F39;
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 8px;
 
   }
 
-
-
   .form-button {
-    margin-top: 16.4%;
+    margin-top: 33%;
     position: absolute;
-    width: 40%;
-    height:14%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
+    border: 1.5px solid white;
     background: #060F39;
-    border: 0.75px solid white;
-
-    border-radius: 6px;
+    border-radius: 8px;
   }
 
   .share-buttons {
-    margin-top: 30%;
+    margin-top: 63%;
+    width: 100%;
 
   }
 
   .share-buttons p {
     font-family: Lato;
     font-style: normal;
-    font-size: 9px;
+    font-size: 15px;
+
+  }
+
+  .text-share {
+    white-space: nowrap;
   }
 
   #emoji-a {
-    font-size: 17px;
-    width: 40%;
+    font-size: 30px;
     height: 10%;
+    width: 70%;
+    padding-left: 21%;
   }
 
   #logo-share {
-    width: 19%; height: 11%;
+    width: 54%;
+    height: 39%;
+    padding-left: 10%;
+
   }
+
 
   .form-button h4 {
     color: white;
-    font-weight: 100;
-    font-size: 8.7px;
-
+    font-weight: 350;
+    font-size: 14px;
   /*  line-height: 20px;*/
-    letter-spacing: 0.3px;
-    margin-top: 7.6px;
+    letter-spacing: 1px;
+    margin-top: 12px;
+
   }
 
+
   .insta-logo {
-    height: 45px; width: 45px;
-    margin-top: 9%;
+    height: 62px; width: 62px;
+    margin-top: 4%;
   }
 
   .site-logo-b {
-    height: 24px; width: 30px;
+    height: 33px; width: 40px;
   }
   .site-logo-a {
-    border-radius: 8px; border: 1.0px solid white;
+    border-radius: 8px; border: 1.5px solid white;
   }
 
 
@@ -999,10 +1021,8 @@ body  {
 
 @media (min-width: 0px) and (max-width: 250px) {
 
-
-
   .banner-links {
-    margin-top: 3%;
+    margin-top: 8%;
   }
 
   .language-header {
@@ -1014,7 +1034,7 @@ body  {
   .language-header  a {
     color: white;
     text-decoration: none;
-    font-size: 6px;
+    font-size: 18px;
   }
 
   /*//--------------
@@ -1029,18 +1049,22 @@ body  {
     position: absolute;
   /*  width: 852px;
     height: 160px;*/
-    left: 5%;
+
     top: 100%;
     margin-top: 7%;
+    width: 90%;
+    left: 5%;
+    right: 5%;
   }
 
+
   .text-container h3 {
-    font-size: 40%;
+    font-size: 120%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 38%;
+    font-size: 110%;
     color: #060F39;
   }
 
@@ -1057,92 +1081,101 @@ body  {
 
   input[placeholder] {
     color: #060F39;
-    font-size: 6px;
+    font-size: 60%;
     /*text-align: center;*/
     padding: 0.8%;
+    padding-left: 4%;
   }
 
 
   .form-input {
-    margin-top: -2%;
+    margin-top: 2%;
     position: absolute;
-    width: 45%;
-    height: 15%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
     /* Colors/White */
 
     background: #FCFCFC;
     /* Colors/LightGrey */
 
-    border: 0.75px solid #060F39;
+    border: 1.5px solid #060F39;
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 8px;
 
   }
 
-
-
   .form-button {
-    margin-top: 17%;
+    margin-top: 33%;
     position: absolute;
-    width: 45%;
-    height: 15%;
-    left: 0;
+    width: 80%;
+    height: 8.5%;
+    left: 10%;
+    right: 10%;
 
+    border: 1.5px solid white;
     background: #060F39;
-    border: 0.75px solid white;
-
-    border-radius: 10px;
+    border-radius: 8px;
   }
 
   .share-buttons {
-    margin-top: 35%;
+    margin-top: 68%;
+    width: 100%;
 
   }
 
   .share-buttons p {
     font-family: Lato;
     font-style: normal;
-    font-size: 10px;
+    font-size: 15px;
+
   }
 
-
+  .text-share {
+    white-space: nowrap;
+  }
 
   #emoji-a {
-    font-size: 14px;
-    width: 45%;
+    font-size: 18px;
     height: 10%;
+    width: 70%;
+    padding-left: 21%;
   }
 
   #logo-share {
-    width: 21%; height: 13%;
+    width: 60%;
+    height: 45%;
+    padding-left: 10%;
+
   }
+
+
 
 
   .form-button h4 {
     color: white;
-    font-weight: 100;
-    font-size: 6.7px;
-
+    font-weight: 350;
+    font-size: 12px;
   /*  line-height: 20px;*/
-    letter-spacing: 0.3px;
-    margin-top: 6.6px;
+    letter-spacing: 1px;
+    margin-top: 8px;
+
   }
 
+
   .insta-logo {
-    height: 30px; width: 30px;
-    margin-top: 12%;
+    height: 62px; width: 62px;
+    margin-top: 4%;
   }
 
   .site-logo-b {
-    height: 12px; width: 18px;
+    height: 33px; width: 40px;
   }
   .site-logo-a {
-    border: 1.0px solid white;
-    border-radius: 4px;
+    border-radius: 8px; border: 1.5px solid white;
   }
-
 
 }
 
