--- a/css/main.css
+++ b/css/main.css
@@ -231,12 +231,12 @@ body  {
   }
 
   .text-container h3 {
-    font-size: 200%;
+    font-size: 190%;
     color: #FCFCFC;
   }
 
   .text-container h4 {
-    font-size: 175%;
+    font-size: 170%;
     color: #060F39;
   }
 
@@ -399,11 +399,13 @@ body  {
   .text-container h3 {
     font-size: 220%;
     color: #FCFCFC;
+    padding-left: 10%;
   }
 
   .text-container h4 {
     font-size: 190%;
     color: #060F39;
+    padding-left: 10%;
   }
 
 /*  .discount-text {
